  * add support for IPv6 tunnels and 6to4 (LP: #502655)
  * fix occasional ufw errors during boot with upstart (/tmp not available)
    (LP: #521359)
  * normalize IPv6 addresses to standard python shortened notation
  * follow iptables and don't require that an interface ends with a number
    (LP: #568877)
  * really allow IPv6 neighbor discovery (LP: #611982)

 -- Jamie Strandboge <jamie@ubuntu.com>  Mon, 01 Feb 2010 23:13:55 -0800

ufw (0.29) RELEASE; urgency=low

  * add egress filtering support:
    - CLI command allows specifying direction in simple and extended syntax
    - status reporting shows outgoing policy and outgoing rules
    - allow changing default outgoing policy
    - connection tracking rules for state NEW, when using a default policy
      of ACCEPT for INPUT and OUTPUT, are now put in their own chains, rather
      than configured in before*.rules
    - add state RELATED,ESTABLISHED rule to ufw-before-output in before*.rules
      like we do with ufw-before-input, to increase performance
    - DEFAULT_OUTPUT_POLICY and DEFAULT_INPUT_POLICY can now also be set to
      ACCEPT_NO_TRACK, which avoids adding connection tracking rules for
      state NEW
    - update documentation for the above
  * add tests/check-requirements and integrate into test suite. This script
    can be used to make sure that your system has all the required iptables
    and netfilter functionality as described in README
  * add doc/ufw-framework.8
  * allow deletion of non-existent application rules introduced in 0.24.
    (LP: #407810)
  * import Launchpad translations:
    - po/ar.po, po/bg.po, po/ca.po, po/cs.po, po/da.po, po/de.po, po/el.po,
      po/en_AU.po, po/en_GB.po, po/fi.po, po/fr.po, po/he.po, po/hu.po,
      po/id.po, po/it.po, po/nb.po, po/nl.po, po/pl.po, po/pt_BR.po, po/pt.po,
      po/ru.po, po/sk.po, po/sl.po, po/sr.po, po/sv.po, po/tl.po, po/zh_CN.po
    - thanks to all contributors: https://translations.launchpad.net/ufw