@@ -408,6 +408,14 @@ IPv6 over IPv4 tunnels and 6to4 are supported by using the 'ipv6' protocol
   ufw allow to 10.0.0.1 proto ipv6
   ufw allow to 10.0.0.1 from 10.4.0.0/16 proto ipv6
 .PP
+IPSec is supported by using the 'esp' ('50') and 'ah' ('51') protocols. These
+protocols can only be used with the full syntax. For example:
+
+  ufw allow to 10.0.0.1 proto esp
+  ufw allow to 10.0.0.1 from 10.4.0.0/16 proto esp
+  ufw allow to 10.0.0.1 proto ah
+  ufw allow to 10.0.0.1 from 10.4.0.0/16 proto ah
+.PP
 In addition to the command-line interface, \fBufw\fR also provides a
 framework which allows administrators to take full advantage of netfilter.
 See the \fBufw-framework\fR manual page for more information.
