@@ -2,7 +2,8 @@ ufw (0.30-1) UNRELEASED; urgency=low
 
   * New upstream release. Fixes:
     - LP: #568877
-    - LP: #611982 
+    - LP: #611982
+    - LP: #606997
   * run_tests.sh: revert temporarily disable 'skipped' check
   * don't flush chains if ufw is not enabled (LP: #581744)
 
